# CanvasBuilder

./: LICENSE  pyproject.toml
canvasbuilder/: ErrorsHandler.py  __init__.py  core.py
canvasbuilder/Exceptions/: CanvasErrorHandling.py  WindowErrorHandling.py
canvasbuilder/Ressources/: color_dictionary.py
canvasbuilder/Shapes/: rectangle.py
canvasbuilder/shapes/: ___README.txt  __init__.py  _shape.py  arc.py  circle.py  line.py  oval.py  rectangle.py  shape.py  square.py  text.py
