[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CanvasBuilder"
version = "0.0.1"
authors = [
  { name="Sévastien GARCIA", email="sebastien.works@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/striatp/CanvasBuilder"
